--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html>
   <head>
-    <meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
+    <style>
+      html, body {
+        padding: 0;
+        margin: 0;
+      }
+    </style>
   </head>
   <body>
-    <canvas id="canvas" width="640" height="480"></canvas>
-    <script src="./hello.js"></script>
-    <script type="module">
-      import init from "./hello.js";
-
-      init();
-    </script>
+    <canvas id="canvas" height="400" width="400"></canvas>
   </body>
 </html>
