--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
   <head>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
     <style>
+      @font-face {
+  font-family: "unifont";
+  src: local('Unifont'), url('./fonts/unifont-15.1.05.otf') format('opentype'); /* Specify the path to the font file and its format */
+}
       html, body {
         padding: 0;
         margin: 0;
+        font-family: "unifont";
       }
     </style>
   </head>
