--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <html>
-  <head>
-    <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
-    <style>
-      @font-face {
-  font-family: "unifont";
-  src: local('Unifont'), url('./fonts/unifont-15.1.05.otf') format('opentype'); /* Specify the path to the font file and its format */
+	<head>
+		<meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
+		<style>
+			@font-face {
+  font-family: 'Unifont';
+  font-style: normal;
+  font-display: swap;
+  font-weight: 400;
+  src: local("Unifont"), url(https://cdn.jsdelivr.net/fontsource/fonts/unifont@latest/latin-400-normal.woff2) format('woff2'), url(https://cdn.jsdelivr.net/fontsource/fonts/unifont@latest/latin-400-normal.woff) format('woff');
 }
-      html, body {
-        padding: 0;
-        margin: 0;
-        font-family: "unifont";
-      }
-    </style>
-  </head>
-  <body>
-    <canvas id="canvas" height="400" width="400"></canvas>
-  </body>
+			      html, body {
+			        padding: 0;
+			        margin: 0;
+			        font-family: "Unifont";
+			      }
+		</style>
+	</head>
+	<body>
+		<canvas id="canvas" height="400" width="400"></canvas>
+	</body>
 </html>
