fix backspace, new font.

--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
 		<meta content="text/html;charset=utf-8" http-equiv="Content-Type" />
 		<style>
 			@font-face {
-  font-family: 'Unifont';
+  font-family: 'Gohu';
   font-style: normal;
   font-display: swap;
   font-weight: 400;
-  src: local("Unifont"), url(https://cdn.jsdelivr.net/fontsource/fonts/unifont@latest/latin-400-normal.woff2) format('woff2'), url(https://cdn.jsdelivr.net/fontsource/fonts/unifont@latest/latin-400-normal.woff) format('woff');
+  src: url(https://raw.githubusercontent.com/koemaeda/gohufont-ttf/master/gohufont-14.ttf) format('truetype');
 }
+
 			      html, body {
 			        padding: 0;
 			        margin: 0;
-			        font-family: "Unifont";
+			        font-family: "Gohu";
 			      }
 		</style>
 	</head>
