--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 	</head>
 	<body>
 		<canvas id="canvas" height="400" width="400"></canvas>
-		
+      <script>
+        window.onerror = (event, source, lineno, colno, error) => window.alert(`${event} in ${source} at ${lineno}:${colno}; ${error}`);
+      </script>
+		<script src="output/index.js"></script>
 	</body>
 </html>
